--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -1,6 +1,92 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 body {
-  @apply bg-indigo-900;
+  font-family: 'Open Sans', sans-serif;
+}
+
+button,
+.btn {
+  vertical-align: top;
+  @apply px-8 py-4 rounded-xl font-bold inline-flex justify-center items-center transition-all;
+  &:hover {
+    @apply scale-105 shadow-xl;
+  }
+  &:active {
+    @apply scale-95 shadow-inner;
+  }
+  &.blue {
+    @apply bg-blue-700 text-white;
+  }
+  &.turqoise {
+    @apply bg-sky-400 text-white;
+  }
+}
+
+input [type='text'] {
+  vertical-align: super;
+  @apply bg-white rounded-lg text-slate-700 px-6 py-4 min-w-[200px] outline-none;
+}
+
+.badge {
+  @apply bg-blue-700 text-white font-thin rounded-3xl min-w-[2rem];
+}
+
+.search {
+  @apply relative inline-flex justify-center items-start bg-white rounded-xl text-slate-700 shadow-sm min-w-[200px] outline-none;
+  > svg {
+    @apply absolute left-4 text-slate-400;
+    top: calc(50% - 0.75rem);
+  }
+  > input[type='search'] {
+    @apply bg-transparent pl-14 pr-6 py-4 outline-none;
+  }
+}
+
+.main-area {
+  @apply px-4 py-6 bg-slate-100 rounded-3xl shadow-2xl grid grid-cols-6;
+  min-height: calc(100vh - 10rem);
+}
+
+.sidebar {
+  @apply rounded-3xl p-3 bg-blue-700 text-white flex flex-col justify-between;
+  > .menu {
+    > .logo-container {
+      @apply block transition-transform hover:scale-105 active:scale-95;
+    }
+    > .menu-item {
+      &,
+      * {
+        user-select: none;
+      }
+      @apply flex items-center py-5 px-8 transition-all rounded-xl;
+      &:hover {
+        @apply bg-white scale-105 shadow-md text-blue-700;
+      }
+      &:active {
+        @apply scale-95 shadow-none;
+      }
+      > .page-name {
+        @apply block pl-6 font-light w-full;
+      }
+      &.active {
+        pointer-events: none;
+        @apply relative font-bold bg-white text-blue-700;
+        > .page-name {
+          @apply font-bold;
+        }
+        &::after {
+          content: '';
+          @apply absolute w-1 bg-cyan-300 right-0 h-7;
+          top: calc(50% - 0.85rem);
+        }
+      }
+    }
+  }
+  > .contact-us {
+    @apply bg-white/20 rounded-3xl p-8 m-2;
+  }
 }
